@startuml
'https://plantuml.com/class-diagram

class InventoryTracker {
    +main()
    +start()
}

class MainWindowController {
    items: ItemModel

    addItemClicked(EventHandler)
    removeItemClicked(EventHandler)
    searchItemClicked(EventHandler)
    importListClicked(EventHandler)
    saveAsClicked(EventHandler)
    initialize()
    editSerialNumber()
}

class ItemModel {
    -list: ObservableList<Item>

    +addItem()
    +removeItem()
    +isSerialNumberUnique()
    +searchList()
}

class Item {
    -value: currency
    -serialNumber: String
    -name: String

    +setValue()
    +getValue()
    +setSerialNumber()
    +getSerialNumber()
    +setName()
    +getName()
    +validateValue()
    +validateSerialNumber()
    +validateName()
}

class AddItemButtonClicked {
    addNewItemButtonClicked(EventHandler)
    openSerialNumberErrorMessage()
    setItemModel()
}

class SearchWindowController {
    searchButtonClicked(EventHandler)
    setItemModel()
}

javafx.Application <|-- InventoryTracker
InventoryTracker -- MainWindowController
MainWindowController -- AddItemButtonClicked
MainWindowController -- SearchWindowController
MainWindowController o-- ItemModel
ItemModel *-- Item

@enduml